# ai_news_researcher

./: .gitignore  Building effective agents.md  Demystifying evals for AI agents.md  GPT-5.2 Prompting Guide.md  How we built our multi-agent research system.md  README.md  debug_marker.py  debug_split.py  package-lock.json  package.json  pyproject.toml  pytest.ini  reprocess_splits.py  requirements.txt  test_split_logic.py
src/: browser_fetch_and_parse.mjs  capture_links_cli.py  chrome_tabs.py  cli.py  config.py  crawler.py  date_extract.py  drafts.py  ingest.py  link_inputs.py  llm.py  newsletter.py  regression.py  storage_paths.py  summarize.py  synthesize.py  themes.py  utils.py  validate.py
src/agents/: _summary_compat.py  draft_agent.py  final_report_agent.py  judge_agent.py
src/ai_news_researcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/application/: __init__.py  ai_tasks.py  content_tasks.py  pipeline.py  report_tasks.py  report_workflow.py
src/domain/: __init__.py  contracts.py  models.py
src/infrastructure/: __init__.py  crawl_service.py  events.py  llm_client.py  persistence.py  tracker_sink.py
src/templates/: prompts.py  weekly_report.md
src/tracker/: index.html  server.py
tests/: test_ai_contracts.py  test_ai_tasks.py  test_capture_links.py  test_crawler.py  test_crawler_live.py  test_crawler_live_unit.py  test_date_extract.py  test_drafts.py  test_legacy_compat.py  test_llm.py  test_openai_config.py  test_pipeline.py  test_regression.py  test_scoring.py  test_story_models.py  test_validate.py
