[project]
name = "ai-news-researcher"
version = "0.1.0"
description = "GenAI weekly report generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pydantic",
    "dateparser",
    "beautifulsoup4",
    "python-dotenv",
    "pypdf",
    "httpx",
    "tenacity",
    "tiktoken",
    "pydantic-settings",
    "typer",
    "fastapi>=0.135.1",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.scripts]
capture-links = "src.capture_links_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
exclude = [
    "^artifacts/",
]
